--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Quiz App</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <div id="div-login">
+        <h1>SIGN-IN</h1>
+        <form>
+            <h2> <i class="fa-solid fa-user"></i> <input id="email-login" type="email" placeholder="Enter Your Email"></h2>
+            <h2> <i class="fa-solid fa-lock"></i> <input id="password-login" type="password" placeholder="Enter Your Password"></h2>
+            <button id="but-login">Sign-in</button>
+        </form>
+        <h4 id="anc-login">New User? <a href="./register.html">Create an account</a></h4>
+    </div>
 
-    <form>
-        <input type="email" id="email" placeholder="Enter your email">
-        <br /><br />
-        <input type="password" id="password" placeholder="Emter your password">
-        <br /><br />
-        <button type="submit">login</button>
-        <br /><br />
-        <a href="./register.html">Not a user?</a>
-    </form>
+    <script src="./signin.js"></script>
 
-
-    <script src="./register.js"></script>
 </body>
 </html>
